# mcp-for-google-calender-and-gmail

./: .gitignore  Procfile  README.md  railway.json  render.yaml  vercel.json
backend/: auth_status.json  calendar_mcp_server.py  gmail_mcp_server.py  google_service_utils.py  main.py  pyproject.toml  requirements.txt  run.py  user_info.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  MarkdownRenderer.css  MarkdownRenderer.tsx
frontend/src/components/: GoogleSignIn.tsx
